--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 #output p {
-  padding: 14px 0px;
+  padding: 14px 0;
   margin: 0 20px;
   border-bottom: 1px solid #e9e9e9;
   color: #555;
@@ -33,7 +33,7 @@ h2 {
 
 #feedback p {
   color: #aaa;
-  padding: 14px 0px;
+  padding: 14px 0;
   margin: 0 20px;
 }
 
@@ -50,7 +50,6 @@ label {
 input {
   padding: 10px 20px;
   box-sizing: border-box;
-  background: #eee;
   border: 0;
   display: block;
   width: 100%;
