Add generic font family

--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ input {
   width: 100%;
   background: #fff;
   border-bottom: 1px solid #eee;
-  font-family: Nunito;
+  font-family: "Nunito", sans-serif;
   font-size: 16px;
 }
 
